methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:1: error: method run overrides nothing.
Note: the super classes of class MethodsPictureLarge contain the following, non final members named run:
def run(): Unit
override def run(a:Int, b:Int) {
             ^